--- a/farmiq-ussd/package.json
+++ b/farmiq-ussd/package.json
@@ -9,12 +9,14 @@
   "author": "Emmanuel Keter",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.78.0",
     "africastalking": "^0.7.7",
     "axios": "^1.13.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "supabase": "^2.54.11",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
